fix(css: bg_container): fix ugly scrollbar

--- a/style.css
+++ b/style.css
@@ -43,6 +43,10 @@ body {
 	height: 100%;
 	z-index: 10;
 	width: 100%;
+	left: 0;
+	bottom: 0;
+	top: 0;
+	right: 0;
 }
 #content_container {
 	position: absolute;
